tests/ui/borrowck/partial-init-locals.stderr
error[E0381]: assigned binding `c` isn't fully initialized
  --> $DIR/partial-init-locals.rs:25:5
   |
LL |     let c: C;
   |         - binding declared here but left uninitialized
LL |     c.0.0.0 = 1;
   |     ^^^^^^^^^^^ `c` assigned here but it isn't fully initialized
   |
   = help: partial initialization isn't supported, fully initialize the binding with a default value and mutate it, or use `std::mem::MaybeUninit`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0381`.
